k8s/birdImage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: birdimage-service
spec:
  selector:
    app: birdimage
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
